<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.ns2j</groupId>
  <artifactId>pdf-print-proxy</artifactId>
  <version>1.0.17</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.source>21</maven.compiler.source>

  </properties>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.0</version>
  </parent>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
    </dependency>


    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <classifier>exec</classifier>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-resources</id>
            <phase>package</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/input</outputDirectory>
              <resources>
                <resource>
                  <directory>${project.build.directory}</directory>
                  <filtering>false</filtering>
                  <includes>
                    <include>${project.artifactId}-${project.version}-exec.jar</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <id>jpackage</id>
            <phase>package</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>${env.JAVA_HOME}/bin/jpackage</executable>
              <commandlineArgs>${jpackage.args}</commandlineArgs>
              <workingDirectory>${project.build.directory}/jpackage</workingDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>win</id>
      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>
      <properties>
        <jpackage.args>
          --type msi --input ${project.build.directory}/input --name
          ${project.artifactId}
          --description "PDF Print Proxy" --vendor "igari.y@gmail.com"
          --app-version ${project.version} --main-jar
          ${project.artifactId}-${project.version}-exec.jar
          --win-menu --win-shortcut --icon ${project.build.directory}/classes/icon.ico
          --add-modules java.base,java.compiler,java.desktop,java.instrument,java.management,java.naming,java.net.http,java.prefs,java.rmi,java.scripting,java.security.jgss,java.sql,jdk.jfr,jdk.unsupported
          --jlink-options "--no-header-files --no-man-pages --strip-debug"
        </jpackage.args>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <executions>
              <execution>
                <id>copy-bin-resources</id>
                <phase>package</phase>
                <goals>
                  <goal>copy-resources</goal>
                </goals>
                <configuration>
                  <outputDirectory>${project.build.directory}/input</outputDirectory>
                  <resources>
                    <resource>
                      <directory>${project.basedir}</directory>
                      <filtering>false</filtering>
                      <includes>
                        <include>PDFtoPrinter.exe</include>
                      </includes>
                    </resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>linux</id>
      <activation>
        <os>
          <family>linux</family>
        </os>
      </activation>
      <properties>
        <jpackage.args>
          --input ${project.build.directory}/input --name ${project.artifactId}
          --description "PDF Print Proxy" --vendor "igari.y@gmail.com"
          --app-version ${project.version} --main-jar
          ${project.artifactId}-${project.version}-exec.jar
          --launcher-as-service
          --add-modules java.base,java.compiler,java.desktop,java.instrument,java.management,java.naming,java.net.http,java.prefs,java.rmi,java.scripting,java.security.jgss,java.sql,jdk.jfr,jdk.unsupported
          --jlink-options "--no-header-files --no-man-pages --strip-debug"
        </jpackage.args>
      </properties>
    </profile>
    <profile>
      <id>mac</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <properties>
        <jpackage.args>
          --type pkg --input ${project.build.directory}/input --name
          ${project.artifactId}
          --description "PDF Print Proxy" --vendor "igari.y@gmail.com"
          --app-version ${project.version} --main-jar
          ${project.artifactId}-${project.version}-exec.jar
          --launcher-as-service
          --icon ${project.build.directory}/classes/icon.icns
          --add-modules java.base,java.compiler,java.desktop,java.instrument,java.management,java.naming,java.net.http,java.prefs,java.rmi,java.scripting,java.security.jgss,java.sql,jdk.jfr,jdk.unsupported
          --jlink-options "--no-header-files --no-man-pages --strip-debug"
        </jpackage.args>
      </properties>
    </profile>
  </profiles>
</project>
